Make sure mobile header ain't spilling over

--- a/src/components/Layout/MobileMenu.module.css
+++ b/src/components/Layout/MobileMenu.module.css
@@ -10,6 +10,7 @@
   background: #fff;
 
   transition: all 200ms ease-in-out;
+  width: 100%;
 }
 
 .wrapper:global(.preEnter),
